Made a cleaner cleanall function, corrected the activator functions

--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,12 @@
 	>
 		
 		<delete dir="lib" />
-	
+		<delete dir="bundle"/>
+		<delete dir="jbehave"/>
+		<delete dir="felix-cache"/>
+		<delete file="authentication.jar"/>
+		<delete file="users.jar"/>
+		<delete file="dbDriver.jar"/>
 	</target>
 	
 	
